<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.tomtom.photon.runner</groupId>
	<artifactId>photon-runner</artifactId>
	<packaging>jar</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>photon-runner</name>

	<profiles>
		<profile>
			<id>lib</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-dependency-plugin</artifactId>
						<executions>
							<execution>
								<phase>install</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}/lib</outputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>

		<dependency>
			<groupId>com.teleatlas.global</groupId>
			<artifactId>common-cli</artifactId>
			<version>2.2</version>
			<exclusions>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>args4j</groupId>
			<artifactId>args4j</artifactId>
			<version>2.0.26</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>16.0.1</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>apache-log4j-extras</artifactId>
			<version>1.2.17</version>
		</dependency>

		<dependency>
			<artifactId>slf4j-api</artifactId>
			<groupId>org.slf4j</groupId>
			<version>1.7.6</version>
		</dependency>

		<dependency>
			<groupId>com.tomtom.photon</groupId>
			<artifactId>zone-maker</artifactId>
			<version>0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/zone-maker-0.1.jar</systemPath>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>com.tomtom.photon</groupId> -->
		<!-- <artifactId>zone-maker</artifactId> -->
		<!-- <version>0.1</version> -->
		<!-- </dependency> -->

		<!-- <dependency> -->
		<!-- <groupId>com.tomtom.photon</groupId> -->
		<!-- <artifactId>photon-converter</artifactId> -->
		<!-- <version>0.1-SNAPSHOT</version> -->
		<!-- <classifier>job</classifier> -->
		<!-- </dependency> -->

		<dependency>
			<groupId>com.tomtom.photon</groupId>
			<artifactId>photon-converter</artifactId>
			<version>0.1-SNAPSHOT</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/photon-converter-0.1-20140331.111951-5-job.jar</systemPath>
		</dependency>

	</dependencies>
	<build>
		<resources>
			<resource>
				<!-- Add the conf directory as resource so, config can be loaded from 
					classpath -->
				<directory>conf</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-source-plugin</artifactId> 
				<executions> <execution> <id>attach-sources</id> <goals> <goal>jar</goal> 
				</goals> </execution> </executions> </plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx1G -XX:MaxPermSize=256M</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<!-- Do Not include the configuration inside the jar -->
					<excludes>
						<exclude>config.xml</exclude>
						<exclude>log4j.xml</exclude>
					</excludes>
					<archive>
<!-- 						<manifestEntries> -->
<!-- 							Add the conf dir to the classpath -->
<!-- 							<Class-Path>conf/</Class-Path> -->
<!-- 						</manifestEntries> -->
						<manifestEntries>
							<Class-Path>lib/photon-converter-0.1-20140331.111951-5-job.jar lib/zone-maker-0.1.jar</Class-Path>
						</manifestEntries>
						<manifest>
							<mainClass>com.teleatlas.global.common.cli.CLI </mainClass>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<argLine>-Xmx1G -XX:MaxPermSize=256M</argLine>
				</configuration>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<id>parse-version</id>
						<goals>
							<goal>parse-version</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<descriptors>
						<descriptor>src/main/assembly/assembly.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>zip jar with libs</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>